--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <input class="input-text" type="text" placeholder="Текст">
         </section>
         <section class="page-key">
-            <div class="page-key text-key">
+            <div class="text-key">
                 <input class="input-key" type="text" placeholder="Ключ">
                 <div class="btn-key">
                     <button id="encrypt">Зашифровать</button>
